--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -2,17 +2,17 @@ _schema: _schema
 paths:
   uploads: uploads
   static: ''
-timezone: Asia/Rangoon
+timezone: Europe/London
 markdown:
   engine: commonmark
   options:
-    xhtml: false
+    xhtml: true
     breaks: false
-    linkify: false
+    linkify: true
     typographer: false
     spaced_lists: false
     sentence_per_line: false
-    gfm: false
+    gfm: true
     code_block_fences: '```'
     escape_snippets_in_code_blocks: false
     treat_indentation_as_code: false
